# tripproof

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.claude/agents/: anchor-expression-reviewer.md  bridge-auditor.md  doc-boundary-reviewer.md  public-doc-wording-reviewer.md
.codex/agents/: anchor-expression-reviewer.toml  bridge-auditor.toml  doc-boundary-reviewer.toml  public-doc-wording-reviewer.toml
.codex/skills/: implementation-note  spec-driven  tripproof-spec-driven
apps/client/: App.tsx  cards.ts  drafts.ts  types.ts
apps/server/: app.py  testing.py
client/: index.html  types.ts
client/api/: questions.ts
client/components/: LeftRail.tsx  ViewTabs.tsx
docs/: development-notes.md  prd.md  product-model.md  work-log.md
docs/archive/: README.md
docs/decisions/: 2026-05-29-product-ai-directory-boundary.md  2026-05-30-preview-integration-chat-first.md  2026-06-03-doc-boundary-reviewer-agent.md  2026-06-03-harness-execution-mode-and-additive-fixes.md  2026-06-03-react-client-python-ai-boundary.md  2026-06-08-python-backend-uv-ingest-boundary.md  2026-06-09-implementation-notes-record-boundary.md  2026-06-09-sensitive-data-fixture-boundary.md  2026-06-19-supabase-only-retrieval-boundary.md  (+1 more)
eval/: README.md  find_observation_by_correlation.py  html_report.py  question_runtime_recording_smoke.py  run_question_dataset.py
fixtures/: README.md
preview/: prd.md  tripproof-preview-c.html  tripproof-preview-ux.html
server/: __init__.py  app.py  models.py
src/: README.md
(+289 files in other folders)
