[project]
name = "tripproof"
version = "0.1.0"
description = "TripProof Python backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["server/tests"]
