[project]
name = "tripproof"
version = "0.1.0"
description = "TripProof Python backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "langsmith>=0.4.43",
  "pdfplumber>=0.11.10",
  "pydantic>=2.11.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "black>=26.5.1",
  "httpx>=0.28.0",
  "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.black]
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["apps"]
testpaths = ["apps/server/tests"]
